--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
           </div>
           <div class="controls">
-            <a href="#" id="day">Daily</a>
-            <a href="#" id="week">Weekly</a>
-            <a href="#" id="month">Monthly</a>
+            <a href="#" id="day" class="control">Daily</a>
+            <a href="#" id="week" class="control">Weekly</a>
+            <a href="#" id="month" class="control">Monthly</a>
           </div>
         </div>
       </div>
