--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="controls">
             <a href="#" id="day" class="control">Daily</a>
-            <a href="#" id="week" class="control">Weekly</a>
+            <a href="#" id="week" class="control active">Weekly</a>
             <a href="#" id="month" class="control">Monthly</a>
           </div>
         </div>
